# CreditRating-FHE

./: CMakeLists.txt  README.md
creditRating/: 1.csv  2.csv  3.csv  CMakeLists.txt  DataProcessor.h  asset_0.csv  asset_2.csv  dataProcessor.cpp  loan_data_100.csv  mainwindow.cpp  mainwindow.h  myApp.cpp  myApp.h  phone_0.csv  phone_1.csv  phone_2.csv
